--- a/payment/done/index.html
+++ b/payment/done/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <link rel="shorycut icon" href="./ICO.png" type="image/x-icon">
-<META HTTP-EQUIV="REFRESH" CONTENT="7;URL=../../index.html">
+<META HTTP-EQUIV="REFRESH" CONTENT="0.5;URL=../../SUCCES.html">
 
 
 
