--- a/payment/done/index.html
+++ b/payment/done/index.html
@@ -10,7 +10,7 @@
   <meta charset="UTF-8">
   <title>result</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,900'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css'><link rel="stylesheet" href="./stylefa.css">
 
 </head>
 <body>
